--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 </table>
 <br>
 <br>
-<select class="routeSelector" style="width: 450px;">
+<select class="routeSelector" style="width: 100%;">
 <!--   <option>Please select</option> -->
 </select>
 <br>
