--- a/index.html
+++ b/index.html
@@ -6,7 +6,88 @@
   <meta name="viewport" 
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"><link rel='stylesheet' href='https://cdn.datatables.net/1.13.5/css/jquery.dataTables.min.css'>
 <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.13/css/select2.min.css'>
+<script>
+  var myRecords = [
+  {
+    route: "234A",
+    bound: "O",
+    stop: "0C4F5FC61E73367C",
+    seq: 1,
+    service_type: 1
+  },
+  {
+    route: "234B",
+    bound: "I",
+    stop: "0C4F5FC61E73367C",
+    seq: 1,
+    service_type: 1
+  },
+  {
+    route: "234A",
+    bound: "I",
+    stop: "966267086A03D688",
+    seq: 1,
+    service_type: 1
+  },
+  {
+    route: "234A",
+    bound: "I",
+    stop: "060A70079F196C7C",
+    seq: 2,
+    service_type: 1
+  },
+  {
+    route: "234A",
+    bound: "I",
+    stop: "003D1263A14908F6",
+    seq: 3,
+    service_type: 1
+  },
 
+  {
+    route: "234B",
+    bound: "O",
+    stop: "966267086A03D688",
+    seq: 1,
+    service_type: 1
+  },
+  {
+    route: "234B",
+    bound: "O",
+    stop: "060A70079F196C7C",
+    seq: 2,
+    service_type: 1
+  },
+  {
+    route: "234B",
+    bound: "O",
+    stop: "003D1263A14908F6",
+    seq: 3,
+    service_type: 1
+  },
+  {
+    route: "52X",
+    bound: "O",
+    stop: "8AFF8B43EC3E547F",
+    seq: 25,
+    service_type: 1
+  },
+  {
+    route: "52X",
+    bound: "I",
+    stop: "1E4E9FB5763C3436",
+    seq: 16,
+    service_type: 1
+  },
+  {
+    route: "53",
+    bound: "O",
+    stop: "8AFF8B43EC3E547F",
+    seq: 56,
+    service_type: 1
+  }
+];
+</script>
 </head>
 <body>
 <!-- partial:index.partial.html -->
