Update citybus.html's title

--- a/citybus.html
+++ b/citybus.html
@@ -12,7 +12,7 @@ Released under the MIT license: http://jsbin.mit-license.org
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>JS Bin</title>
+  <title>Citybus ETA</title>
   <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
   <script src='https://cdn.datatables.net/2.0.3/js/dataTables.min.js'></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/dexie/4.0.1/dexie.min.js" integrity="sha512-ivrkdCfiR6zx/PLVgdDLJ9+8RkRn3wyXHrUj8wpdl+VtYUJqnw+TquLEd94cTbe9NlB06XtbPl9EnZdto6UNaQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
